--- a/app/views/index.handlebars
+++ b/app/views/index.handlebars
@@ -11,14 +11,15 @@
 
         </div>
     </div>
+
     <!-- The Login In Modal -->
-    <div class="modal" id="login_modal">
+    <div class="modal fade" id="login_modal">
         <div class="modal-dialog">
             <div class="modal-content">
 
                 <!-- Modal Header -->
                 <div class="modal-header">
-                    <h4 class="modal-title">Select Sign In Method</h4>
+                    <h4 class="modal-title">User Sign In</h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
 
@@ -33,8 +34,9 @@
             </div>
         </div>
     </div>
+
     <!-- The Sign Up Modal -->
-    <div class="modal" id="signup_modal">
+    <div class="modal fade" id="signup_modal">
         <div class="modal-dialog">
             <div class="modal-content">
 
@@ -44,37 +46,40 @@
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <!-- Modal body -->
-                <div class="container">
-                    <form class="container lead" method="GET" action="/user">
-                        <div class="form-group">
-                            <label for="full_name">Full Name</label>
-                            <input type="input" class="form-control" id="full_name" aria-placeholder="First & Last Name">
+                <div class="container modal-body">
 
-                            <label for="email">Email address</label>
-                            <input type="email" class="form-control" id="user_email" placeholder="Enter your email">
+                    <div class="form-control">
+                        <label for="name">Full Name</label>
+                        <input name="user_name" type="input" id="name" aria-placeholder="First & Last Name" class="form-control">
 
-                            <label for="pwd">Password</label>
-                            <input type="password" class="form-control" id="user_password" aria-placeholder="Choose a password...">
-                        </div>
+                        <label for="email">Email address</label>
+                        <input name="user_email" type="email" id="user_email" placeholder="Enter your email" class="form-control">
 
-                        <button type="submit" class="btn btn-primary" id="signup-btn">Sign Up</button>
+                        <label for="pwd">Password</label>
+                        <input name="user_password" type="password" id="user_password" aria-placeholder="Choose a password..." class="form-control">
 
-                        <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                        <label for="date">Signup Date</label>
+                        <input name="signup_date" type="input" id="signup_date" class="form-control" readonly>
+                    </div>
+                    <a href="/user">
+                        <button type="submit" class="btn btn-primary" id="signup-btn">Complete</button>
+                    </a>
 
-                        <!-- Modal footer -->
-                        <div class="modal-footer">
-                            <small id="emailSignHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                        </div>
-                    </form>
+                    <button type="submit" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <small id="emailSignHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                    </div>
+
                 </div>
             </div>
         </div>
     </div>
 
 </div>
-{{>articles}}
-<div class="container">
 
+<div class="container">
     <form method="POST" action="/article">
         <div class="input-group input-group-lg">
             <div class="input-group-prepend">
@@ -84,9 +89,5 @@
             <input class="btn btn-primary" type="submit" id="submit" value="Submit">
         </div>
     </form>
-
+    {{>articles}}
 </div>
-<!-- Include Articles partial-->
-{{!-- Create a Handlebars if statement to check the value of the user's email. --}}
-{{!-- If guest, don't display logout
-button. --}}{{!-- if logged in, don't display login button or sign up button --}}
