--- a/app/views/layouts/main.handlebars
+++ b/app/views/layouts/main.handlebars
@@ -7,9 +7,8 @@
     <title>Harkup TTS</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
-    <!-- Include Firebase -->
+    <!-- Include Firebase Project -->
     <script src="https://www.gstatic.com/firebasejs/5.0.3/firebase.js"></script>
-
     <!-- Firebase UI Widget -->
     <script src="https://cdn.firebase.com/libs/firebaseui/3.0.0/firebaseui.js"></script>
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.0.0/firebaseui.css">
@@ -17,11 +16,8 @@
     <!-- Font Awesome API -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
 
-
     <!-- Latest compiled and minified CSS -->
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
@@ -35,15 +31,11 @@
 <body id="body" class="mb-2 text-white bg-dark">
 
     {{{ body }}}
-
-
-
     <!-- Personal Javascript file -->
     <script src="/assets/js/app.js"></script>
 
     <!-- Include MomentJS  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/moment.min.js"></script>
-
 
     <!-- ResponsiveVoice API -->
     <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
